# c-basics-efficient-programming

./: CMakeLists.txt  INSTRUCTIONS.md  README.md
inc/: lab3_optimized.h
src/: lab3_optimized.c  laboratorio3.c
